# Contrato-Veicular-PY

./: .gitignore  LICENSE  contrato.txt  pyproject.toml  readme.md  requirements.txt
src/contrato_veicular/: __init__.py  app.py  main.py
src/contrato_veicular/application/: __init__.py
src/contrato_veicular/application/use_cases/: __init__.py  generate_contract.py  validate_form.py
src/contrato_veicular/config/: __init__.py  colors.py  logging_config.py
src/contrato_veicular/domain/: __init__.py
src/contrato_veicular/domain/entities/: __init__.py  entities.py
src/contrato_veicular/domain/formatters/: __init__.py  formatters.py
src/contrato_veicular/domain/validators/: __init__.py  validators.py
src/contrato_veicular/infrastructure/: __init__.py
src/contrato_veicular/infrastructure/file_system/: __init__.py  template_loader.py
src/contrato_veicular/infrastructure/pdf/: pdf_generator.py
src/contrato_veicular/infrastructure/ui/: __init__.py  calendar.py  components.py  placeholder_manager.py
