[project]
name = "contrato-veicular"
version = "1.0.0"
description = "Aplicativo de geração automatizada de contratos de veículos em PDF"
readme = "readme.md"
requires-python = ">=3.8"
authors = [
    {name = "Isllan Toso"}
]
dependencies = [
    "customtkinter>=5.2.0",
    "reportlab>=4.0.0",
    "PyPDF2>=3.0.0",
    "tkcalendar>=1.6.1",
]

[project.scripts]
contrato = "contrato_veicular.main:main"

[project.urls]
Homepage = "https://github.com/Isllanrx/Contrato-Veicular-PY"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contrato_veicular"]

[dependency-groups]
dev = []
